--- a/ui/src/css/style.css
+++ b/ui/src/css/style.css
@@ -51,7 +51,7 @@ button {
 }
 
 .select-indices-block {
-    display: inline;
+    display: inline-block;
     margin-bottom: 20px;
     margin-top: 20px;
     padding: 0px 10px;
@@ -72,7 +72,7 @@ button {
     margin-left: 15px;
 }
 
-.datetime-picker {
+.date-selectors {
     align-content: center;
 }
 
@@ -89,5 +89,9 @@ button {
 .currency-icon {
     width: 20px;
     height: 20px;
+}
+
+.datetimepicker-container {
+    display: inline-grid;
 }
 
